# sm121-kernels

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  STABILITY.md  cbindgen.toml  pyproject.toml
.github/: pull_request_template.md
crates/sm121-kernels/: Cargo.toml  build.rs
crates/sm121-kernels/examples/: all_v2_bench.rs  auto_dispatch_check.rs  basic_gemm.rs  bench_fp8_gemm_v3.rs  benchmark.rs  flash_attention.rs  fp8_block128_bench.rs  fp8_block128_dense_bench.rs  fp8_block128_v1_v2_bench.rs  fp8_mla_v1_v2_bench.rs  fp8kv_mla_bench.rs  gdn_tma_bench.rs  gemm_fp8_scaling_bench.rs  gemm_scaling_bench.rs  gemm_v4_correctness.rs  gemm_v4_k64_correctness.rs  grouped_gemm_bench.rs  linear_attn_chunk_bench.rs  linear_attn_state_update_bench.rs  mla_demo.rs  mla_tma_bench.rs  moe_demo.rs  moe_gemm_shape_sweep.rs  moe_gemm_sweep.rs  mxfp4_v1_v2_bench.rs  nccl_allreduce_sanity.rs  nccl_ring_attention_sanity.rs  new_kernels_bench.rs  nvfp4_scale_format_bench.rs  quantized_pipeline.rs  ring_attention_demo.rs  rust_api_demo.rs  w8a16_fused_bench.rs  w8a16_ne1_microbench.rs
crates/sm121-kernels/src/: device.rs  error.rs  lib.rs  module.rs
crates/sm121-kernels/src/activation/: mod.rs
crates/sm121-kernels/src/attention/: dsa.rs  mod.rs
crates/sm121-kernels/src/distributed/: mod.rs  nccl_transport.rs  ring_attention.rs  ring_attention_distributed.rs
crates/sm121-kernels/src/embedding/: mod.rs
crates/sm121-kernels/src/ffi/: mod.rs  types.rs
crates/sm121-kernels/src/gemm/: mod.rs
crates/sm121-kernels/src/kv_cache/: mod.rs
crates/sm121-kernels/src/linear_attention/: mod.rs
crates/sm121-kernels/src/moe/: mod.rs
crates/sm121-kernels/src/norm/: mod.rs
crates/sm121-kernels/src/quantization/: mod.rs
crates/sm121-kernels/src/rope/: mod.rs
crates/sm121-kernels/src/sampling/: mod.rs
crates/sm121-kernels/tests/: test_attention.rs  test_attn_fp8kv_decode.rs  test_bf16_gemv_w16.rs  test_conv1d_silu.rs  test_conv1d_silu_batched.rs  test_decode_d192_dv128.rs  test_decode_d256.rs  test_decode_d256_fp8kv.rs  test_decode_d512.rs  test_decode_d512_fp8kv.rs  test_dsa_end_to_end.rs  test_dsa_indexer.rs  test_dsa_sparse_attention.rs  test_elementwise.rs  test_error_paths.rs  test_fa_batched_chunk.rs  test_fp8kv_prefill.rs  test_gated_rmsnorm_silu.rs  test_gdn_alpha_beta.rs  test_gdn_alpha_beta_batched.rs  test_gemm.rs  test_gemm_bf16_mma_v2.rs  test_gemm_fp8_block128.rs  test_gemm_fp8_mma_v3.rs  test_gemv_w8a16_fused.rs  test_kv_cache.rs  test_l2norm_replicate.rs  test_linear_attention.rs  test_linear_attn_chunk_prefill.rs  test_linear_attn_state_update_mma.rs  test_linear_attn_y_inter_mma.rs  test_masked_argmax_kernel.rs  test_mla_combine.rs  test_mla_mma.rs  test_mla_mma_qk.rs  test_mla_tma.rs  test_moe.rs  test_moe_fp8_block128.rs  test_moe_fp8_block128_e2e.rs  test_moe_fp8_grouped.rs  (+22 more)
crates/sm121-kernels/tests/common/: mod.rs
docs/: BUILD.md  CORRECTNESS.md  benchmark_methodology.md  cutlass_comparison.md  design.md  gemm_v4_design.md  implementation-guide.md  kernel_inventory.md  mma_mla_design.md  optimization_journey.md  reproducer.md  sm120_architecture_guide.md
examples/: c_api_demo.c
python/: test_sm121_kernels.py
scripts/: check_codegen_identity.sh  gen_ptx_variants.sh  ptx_syntax_check.sh  reproducer.sh  sass_analysis.sh  (+1 more)
(+279 files in other folders)
